# dateparser_benchmarks

./: Cargo.toml  README.md
benches/: datetime_parsers.rs
examples/: nom_api.rs
src/: datetime_regex_pure.rs  lib.rs
